--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
-    "webpack-dev-server": "^5.2.2"
+    "webpack-dev-server": "^5.2.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
