--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@google-cloud/vision": "^5.2.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
-    "@mui/x-date-pickers": "^6.18.7",
+    "@mui/x-date-pickers": "^6.20.2",
     "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +19,9 @@
     "@types/react-dom": "^18.2.4",
     "axios": "^1.6.7",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
     "html-webpack-plugin": "^5.5.3",
+    "jsqr": "^1.4.0",
     "multer": "^2.0.1",
     "openai": "^5.3.0",
     "pdf2json": "^3.1.6",
