--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "documentor-v3": "file:..",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.1",
